# chem281-lab3

./: .gitignore  Dockerfile  README.md  build_image.sh  interactive.sh  visualize.ipynb
kmc/: CMakeLists.txt
kmc/include/: kmc.h  kmc_utilities.h  reaction.h
kmc/src/: kmc.cpp  kmc_utilities.cpp  main.cpp
kmc/test/: kmc_test.cpp
